--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <div id=everything style="display: none;">
             <div id=basicMoney>
                 Copper: <span id=copper>0</span>
+                Silver: <span id=silver style="display: none;">0</span>
+                Gold: <span id=gold style="display: none;">0</span>
+                Platinum: <span id=platinum style="display: none;">0</span>
                 <div>
                     Charge: <span id=charge></span>/1000
                 </div>
