--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
         <div id=start>
             <button onclick="startgame()">Start The Game</button>
         </div>
-        <div id=everything style="display: none;">
-            <div id=basicMoney>
-                Copper: <span id=copper>0</span>
-                Silver: <span id=silver style="display: none;">0</span>
-                Gold: <span id=gold style="display: none;">0</span>
-                Platinum: <span id=platinum style="display: none;">0</span>
-                <div>
-                    Charge: <span id=charge></span>/1000
-                </div>
+        <div id=basicMoney>
+            Copper: <span id=copper style="display: none;">0</span>  <br>
+            Silver: <span id=silver style="display: none;">0</span> <br>
+            Gold: <span id=gold style="display: none;">0</span> <br>
+            Platinum: <span id=platinum style="display: none;">0</span>
+            <div id=charger style="display: none;">
+                Charge: <span id=charge></span>/1000
             </div>
         </div>
         <script>
