--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <button onclick="startgame()">Start The Game</button>
         </div>
         <div id=basicMoney>
-            Copper: <span id=copper style="display: none;">0</span>  <br>
-            Silver: <span id=silver style="display: none;">0</span> <br>
-            Gold: <span id=gold style="display: none;">0</span> <br>
-            Platinum: <span id=platinum style="display: none;">0</span>
+            <div id=showcopper style="display: none;">Copper: <span id=copper>0</span></div>
+            <div id=showsilver style="display: none;">Silver: <span id=silver>0</span></div>
+            <div id=showgold style="display: none;">Gold: <span id=gold>0</span></div>
+            <div id=showplatinum style="display: none;">Platinum: <span id=platinum>0</span></div>
             <div id=charger style="display: none;">
                 Charge: <span id=charge></span>/1000
             </div>
